--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,7 +15,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build_on_linux:
+  build_on_Ubuntu_latest:
 
     runs-on: ubuntu-latest
 
@@ -30,7 +30,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-  build_on_mac:
+  build_on_MacOS_latest:
 
     runs-on: macOS-latest
 
@@ -45,7 +45,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-  windows:
+  build_on_Windows_Latest:
 
     runs-on: windows-latest
 
