--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,8 +15,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build_on_Ubuntu_latest:
 
+  build_on_Ubuntu_latest:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,7 +31,6 @@ jobs:
       run: mvn -B package --file pom.xml
 
   build_on_MacOS_latest:
-
     runs-on: macOS-latest
 
     steps:
@@ -45,20 +44,19 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-  build_on_Windows_Latest:
-
-    runs-on: windows-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+#  build_on_Windows_Latest:
+#    runs-on: windows-latest
+#
+#    steps:
+#    - uses: actions/checkout@v4
+#    - name: Set up JDK 17
+#      uses: actions/setup-java@v3
+#      with:
+#        java-version: '17'
+#        distribution: 'temurin'
+#        cache: maven
+#    - name: Build with Maven
+#      run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
