--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,33 +16,33 @@ on:
 
 jobs:
 
-  build_on_Ubuntu_latest:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-  build_on_MacOS_latest:
-    runs-on: macOS-latest
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+#  build_on_Ubuntu_latest:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#    - uses: actions/checkout@v4
+#    - name: Set up JDK 21
+#      uses: actions/setup-java@v4
+#      with:
+#        java-version: '21'
+#        distribution: 'temurin'
+#        cache: maven
+#    - name: Build with Maven
+#      run: mvn -B package --file pom.xml
+#
+#  build_on_MacOS_latest:
+#    runs-on: macOS-latest
+#
+#    steps:
+#    - uses: actions/checkout@v4
+#    - name: Set up JDK 21
+#      uses: actions/setup-java@v4
+#      with:
+#        java-version: '21'
+#        distribution: 'temurin'
+#        cache: maven
+#    - name: Build with Maven
+#      run: mvn -B package --file pom.xml
 
   build_on_Windows_Latest:
     runs-on: windows-latest
