--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,47 +16,47 @@ on:
 
 jobs:
 
-#  build_on_Ubuntu_latest:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#    - uses: actions/checkout@v4
-#    - name: Set up JDK 21
-#      uses: actions/setup-java@v4
-#      with:
-#        java-version: '21'
-#        distribution: 'temurin'
-#        cache: maven
-#    - name: Build with Maven
-#      run: mvn -B package --file pom.xml
-#
-#  build_on_MacOS_latest:
-#    runs-on: macOS-latest
-#
-#    steps:
-#    - uses: actions/checkout@v4
-#    - name: Set up JDK 21
-#      uses: actions/setup-java@v4
-#      with:
-#        java-version: '21'
-#        distribution: 'temurin'
-#        cache: maven
-#    - name: Build with Maven
-#      run: mvn -B package --file pom.xml
-
-  build_on_Windows_Latest:
-    runs-on: windows-latest
+  build_on_Ubuntu_latest:
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
-        java-version: '21.0.2'
+        java-version: '21'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+
+  build_on_MacOS_latest:
+    runs-on: macOS-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+
+#  build_on_Windows_Latest:
+#    runs-on: windows-latest
+#
+#    steps:
+#    - uses: actions/checkout@v4
+#    - name: Set up JDK 21
+#      uses: actions/setup-java@v4
+#      with:
+#        java-version: '21.0.2'
+#        distribution: 'temurin'
+#        cache: maven
+#    - name: Build with Maven
+#      run: mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     # - name: Update dependency graph
